# filenavigation

./: .gitignore  LICENSE.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/readme/: README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: index.js
src/i18n/locales/: ar.js  de.js  en.js  es.js  fr.js  hi.js  id.js  it.js  ja.js  ko.js  nl.js  pl.js  pt-BR.js  ru.js  th.js  tr.js  uk.js  vi.js  zh-CN.js  zh-TW.js
updates/: latest.json
