[package]
name = "filenavigation"
version = "0.1.3"
description = "A fast local directory file finder."
authors = ["FileNavigation contributors"]
edition = "2024"
license-file = "../LICENSE.md"
repository = "https://github.com/CSXFanMeng/filenavigation"

[lib]
name = "filenavigation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
